Empezamos ejercicios arrays

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 *.jar
 /Practica1/nbproject/private/
 /Practica1/build/
+/AceptaElReto/nbproject/private/
+/AceptaElReto/build/
+/Ap7_arrays/nbproject/private/
+/Ap7_arrays/build/
