Añadido correcion Calculadora_CODE, ejercicios array y recorridos, validadorDNI y validadorISBN

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /Ap7_arrays/build/
 /Calculadora_CODE/nbproject/
 /Calculadora_CODE/target/
+/ValidadorDNI/nbproject/private/
+/ValidadorDNI/build/
+/ValidadorISBN/nbproject/private/
+/ValidadorISBN/build/
