ejercicios String, CODE Primeros pasos POO, tarea final CODE ISBN

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /ValidadorDNI/build/
 /ValidadorISBN/nbproject/private/
 /ValidadorISBN/build/
+/Ap_cadenas/nbproject/private/
+/Ap_cadenas/build/
+/POO_CODE/nbproject/private/
+/POO_CODE/build/
+/ValidadorISBN_2/nbproject/private/
+/ValidadorISBN_2/build/
