Usuarios de sistema CODE terminado

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /POO_CODE/build/
 /ValidadorISBN_2/nbproject/private/
 /ValidadorISBN_2/build/
+/UsuariosSistema_CODE/nbproject/private/
+/UsuariosSistema_CODE/build/
