Funciones, clases y examenes

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 /ValidadorISBN_2/build/
 /UsuariosSistema_CODE/nbproject/private/
 /UsuariosSistema_CODE/build/
+/ap8_funciones/nbproject/private/
+/ap8_funciones/build
+/Ap8_funciones/nbproject/private/
+/Ap8_funciones/build/
+/Ap9_funciones/nbproject/private/
+/Ap9_funciones/build/
+/Ap_Clases/nbproject/private/
+/Ap_Clases/build/
+/CarlosSanchezCorral/nbproject/private/
+/CarlosSanchezCorral/build/
