Varios ejercicios nuevos

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@
 /Ap_Clases/build/
 /CarlosSanchezCorral/nbproject/private/
 /CarlosSanchezCorral/build/
+/SeleccionFutbol/nbproject/private/
+/ClasesHerencia2/nbproject/private/
+/ClasesHerencia2/build/
+/EjerciciosListas/nbproject/private/
+/EjerciciosListas/build/
