añadido Depuracion_CODE y herencias2

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@
 /ClasesHerencia2/build/
 /EjerciciosListas/nbproject/private/
 /EjerciciosListas/build/
+/Depuracion_CODE/nbproject/private/
+/Depuracion_CODE/build/
+/Depuracion_CODE/dist/
